logs/dag_id=weather_dag_api/run_id=manual__2023-04-26T13:32:24.973005+00:00/task_id=insert_data/attempt=1.log
[2023-04-26T13:32:42.974+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_api.insert_data manual__2023-04-26T13:32:24.973005+00:00 [queued]>
[2023-04-26T13:32:42.997+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_api.insert_data manual__2023-04-26T13:32:24.973005+00:00 [queued]>
[2023-04-26T13:32:42.998+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T13:32:43.000+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-04-26T13:32:43.001+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T13:32:43.033+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): insert_data> on 2023-04-26 13:32:24.973005+00:00
[2023-04-26T13:32:43.045+0000] {standard_task_runner.py:55} INFO - Started process 349 to run task
[2023-04-26T13:32:43.050+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather_dag_api', 'insert_data', 'manual__2023-04-26T13:32:24.973005+00:00', '--job-id', '19', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag_api.py', '--cfg-path', '/tmp/tmpxuav7b2e']
[2023-04-26T13:32:43.052+0000] {standard_task_runner.py:83} INFO - Job 19: Subtask insert_data
[2023-04-26T13:32:43.330+0000] {task_command.py:389} INFO - Running <TaskInstance: weather_dag_api.insert_data manual__2023-04-26T13:32:24.973005+00:00 [running]> on host d48b88797b3b
[2023-04-26T13:32:43.527+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_dag_api
AIRFLOW_CTX_TASK_ID=insert_data
AIRFLOW_CTX_EXECUTION_DATE=2023-04-26T13:32:24.973005+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-26T13:32:24.973005+00:00
[2023-04-26T13:32:43.529+0000] {sql.py:254} INFO - Executing: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed)
		VALUES (2023-04-25T10:20:00Z,
		15.1,
		0.0,
		2.0);
[2023-04-26T13:32:43.557+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-26T13:32:44.024+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-26T13:32:44.031+0000] {sql.py:375} INFO - Running statement: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed)
		VALUES (2023-04-25T10:20:00Z,
		15.1,
		0.0,
		2.0);, parameters: None
[2023-04-26T13:32:44.034+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "T10"
LINE 2:   VALUES (2023-04-25T10:20:00Z,
                            ^

[2023-04-26T13:32:44.055+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=weather_dag_api, task_id=insert_data, execution_date=20230426T133224, start_date=20230426T133242, end_date=20230426T133244
[2023-04-26T13:32:44.081+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 19 for task insert_data (syntax error at or near "T10"
LINE 2:   VALUES (2023-04-25T10:20:00Z,
                            ^
; 349)
[2023-04-26T13:32:44.116+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-26T13:32:44.168+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
